    order to reduce lock contention.  (Nicolas Liochon via szetszwo)

    HADOOP-10067. Missing POM dependency on jsr305 (Robert Rati via stevel)

    HADOOP-10103. update commons-lang to 2.6 (Akira AJISAKA via stevel)

    HADOOP-10111. Allow DU to be initialized with an initial value (Kihwal Lee
    via jeagles)

    HADOOP-10126. LightWeightGSet log message is confusing. (Vinay via suresh)

  OPTIMIZATIONS

    HADOOP-9748. Reduce blocking on UGI.ensureInitialized (daryn)

   HADOOP-10047. Add a direct-buffer based apis for compression. (Gopal V
   via acmurthy)

  BUG FIXES

    HADOOP-9964. Fix deadlocks in TestHttpServer by synchronize
    ReflectionUtils.printThreadInfo. (Junping Du via llu)

    HADOOP-9582. Non-existent file to "hadoop fs -conf" doesn't throw error
    (Ashwin Shankar via jlowe)

    HADOOP-9817. FileSystem#globStatus and FileContext#globStatus need to work
    with symlinks. (Colin Patrick McCabe via Andrew Wang)

    HADOOP-9652.  RawLocalFs#getFileLinkStatus does not fill in the link owner
    and mode.  (Andrew Wang via Colin Patrick McCabe)

    HADOOP-9875.  TestDoAsEffectiveUser can fail on JDK 7.  (Aaron T. Myers via
    Colin Patrick McCabe)

    HADOOP-9865.  FileContext#globStatus has a regression with respect to
    relative path.  (Chuan Lin via Colin Patrick McCabe)

    HADOOP-9909. org.apache.hadoop.fs.Stat should permit other LANG.
    (Shinichi Yamashita via Andrew Wang)

    HADOOP-9908. Fix NPE when versioninfo properties file is missing (todd)

    HADOOP-9929. Insufficient permissions for a path reported as File Not
    Found.  (Contributed by Colin Patrick McCabe)

    HADOOP-9791. Add a test case covering long paths for new FileUtil access
    check methods (ivanmi)

    HADOOP-9981. globStatus should minimize its listStatus and getFileStatus
    calls.  (Contributed by Colin Patrick McCabe)

    HADOOP-10006. Compilation failure in trunk for
    o.a.h.fs.swift.util.JSONUtil (Junping Du via stevel)
